<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblhikename"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/lblhikelocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/lblhikedate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btndetail" />

        <Button
            android:id="@+id/btnedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnedit" />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btndelete" />
    </LinearLayout>
</LinearLayout>